# my_cii

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.c  testwords.txt  testwords2.txt
examples/: CMakeLists.txt  test_arena.c  test_array.c  test_atom.c  test_bit.c  test_fmt.c  test_getword.c  test_list.c  test_mem.c  test_ring.c  test_seq.c  test_set.c  test_str.c  test_table.c  xref.c
include/: arena.h  array.h  arrayrep.h  assert.h  atom.h  bit.h  examples.h  except.h  fmt.h  getword.h  list.h  mem.h  ring.h  seq.h  set.h  str.h  table.h  text.h
src/: CMakeLists.txt  arena.c  array.c  assert.c  atom.c  bit.c  except.c  fmt.c  getword.c  list.c  mem.c  memchk.c  ring.c  seq.c  set.c  str.c  table.c
